--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,22 @@
 {
-  "name": "House Expense Splitter",
-  "short_name": "Expenses",
+  "name": "Project H16 Expense Manager",
+  "short_name": "H16Expenses",
+  "description": "Manage house/group expenses with admin approval, payment requests, and monthly trackers.",
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#007bff",
+  "orientation": "portrait-primary",
   "icons": [
-    { "src": "icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "icon-512.png", "sizes": "512x512", "type": "image/png" }
+    {
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
   ]
 }
